examples/test/testpolicy3663.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3663
  namespace: namespace427
spec:
  podSelector:
    matchLabels:
      key32: value22
      key22: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value48
          key34: value30
      podSelector:
        matchLabels:
          key34: value19
          key0: value6
          key39: value28
